--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,8 @@ services:
             - "5601:5601"
         depends_on:
             - elasticsearch
+
+    redis:
+        image: redis:latest
+        ports:
+            - "6379:6379"
